<resources>
    <string name="app_name">CoinConversion</string>

    <string name="hint_usuario">Usuário</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_valor">Valor</string>

    <string name="texto_permanecer_logado">Permanecer logado</string>
    <string name="texto_esqueceu_senha">Esqueceu sua senha? </string>
    <string name="texto_clique_aqui">Clique aqui</string>
    <string name="texto_converter">Converter</string>
    <string name="texto_historico">Histórico</string>
    <string name="texto_historico_pontos">Histórico:</string>
    <string name="texto_data_pontos">Data:</string>
    <string name="texto_resultado">Resultado:</string>
    <string name="texto_valor">Valor:</string>
    <string name="texto_converter_para">Converter para:</string>
    <string name="texto_ok">OK</string>
    <string name="texto_igual">=</string>
    <string name="texto_eur">EUR</string>
    <string name="texto_usd">USD</string>
    <string name="texto_selecione_base">Selecione sua moeda base:</string>
    <string name="texto_sem_internet">Por favor, conecte-se a internet para utilizar a aplicação!</string>
    <string name="texto_atencao">Atenção</string>
    <string name="texto_valor_valido">Por favor, insira um valor válido!</string>
    <string name="texto_nenhum_historico">Nenhum histórico encontrado!</string>

    <!--Toast exibido ao pressionar o botão 'back' do smartphone-->
    <string name="texto_pressione_novamente">Pressione mais uma vez para sair!</string>

</resources>
