<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".interface_grafica.MainActivity">

    <include
        android:id="@+id/actionbar_padrao"
        layout="@layout/layout_tollbar_actionbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/actionbar_padrao">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Margem32dp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="@dimen/dimen20sp"
                android:text="@string/texto_selecione_base"
                />

            <Spinner
                android:id="@+id/sp_seleciona_base"
                android:textAlignment="center"
                android:background="@drawable/ic_border_edit_text"
                android:layout_margin="@dimen/Margem12dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/Margem32dp">
            </Spinner>

            <LinearLayout
                android:id="@+id/ll_converte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/Margem16dp"
                android:layout_marginRight="@dimen/Margem12dp"
                android:layout_marginLeft="@dimen/Margem12dp"
                android:backgroundTint="@color/corFundo"
                android:background="@drawable/ic_border_login">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/Margem12dp"
                    android:background="@drawable/ic_border_edit_text"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_nome_moeda1"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/texto_usd"
                        android:textAlignment="center"
                        android:textSize="@dimen/dimen20sp"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/texto_igual"
                        android:textAlignment="center"
                        android:textSize="@dimen/dimen20sp"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/tv_valor_moeda1"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="@dimen/dimen20sp"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@drawable/ic_border_edit_text"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_nome_moeda2"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/texto_eur"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textSize="@dimen/dimen20sp"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/texto_igual"
                        android:textAlignment="center"
                        android:textSize="@dimen/dimen20sp"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/tv_valor_moeda2"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="@dimen/dimen20sp"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/Margem12dp"
                    android:layout_marginRight="@dimen/Margem12dp"
                    android:layout_marginLeft="@dimen/Margem12dp">

                    <TextView
                        android:id="@+id/tv_texto_converte"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:textSize="@dimen/dimen20sp"
                        android:text="@string/texto_converter_para"
                        />

                    <Spinner
                        android:id="@+id/sp_seleciona_moeda"
                        android:textAlignment="center"
                        android:background="@drawable/ic_border_edit_text"
                        android:backgroundTint="@android:color/white"
                        android:layout_margin="@dimen/Margem16dp"
                        android:textSize="@dimen/dimen20sp"
                        android:layout_width="match_parent"
                        android:textColorHint="@color/corFundo"
                        android:layout_height="@dimen/Margem32dp"/>

                    <TextView
                        android:id="@+id/tv_texto_converte_valor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:textSize="@dimen/dimen20sp"
                        android:text="@string/texto_valor"
                        />

                    <EditText
                        android:id="@+id/et_valor_desejado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/Margem16dp"
                        android:background="@drawable/ic_border_edit_text"
                        android:backgroundTint="@android:color/white"
                        android:hint="@string/hint_valor"
                        android:inputType="numberDecimal"
                        android:textColorHint="@color/corFundo"
                        android:textSize="@dimen/dimen20sp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        tools:ignore="Autofill" />

                    <TextView
                        android:id="@+id/tv_texto_resultado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:textSize="@dimen/dimen20sp"
                        android:text="@string/texto_resultado"
                        />

                    <TextView
                        android:id="@+id/tv_resultado"
                        android:background="@drawable/ic_border_edit_text"
                        android:layout_margin="@dimen/Margem16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/dimen20sp"
                        android:clickable="false" />

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_converte"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textSize="@dimen/dimen20sp"
                    android:text="@string/texto_converter"
                    android:onClick="coverteMoeda"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="iniciaHistorico"
                android:text="@string/texto_historico"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/dimen20sp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>